--- a/app/src/main/res/layout/fragment_message.xml
+++ b/app/src/main/res/layout/fragment_message.xml
@@ -4,7 +4,11 @@
     tools:context="com.drivehype.www.drivehype.MessageFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:text="@string/title_section4" />
+
+
 
 </FrameLayout>
