--- a/app/src/main/res/layout/fragment_pull.xml
+++ b/app/src/main/res/layout/fragment_pull.xml
@@ -2,8 +2,45 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" tools:context="com.drivehype.www.drivehype.PullFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
-        android:text="@string/title_section2" />
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="@drawable/pullimage"
+        android:layout_gravity="center_horizontal|bottom"
+        android:weightSum="1">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textColor="#f4f4f3de"
+            android:textSize="35sp"
+            android:typeface="monospace"
+            android:text="@string/pull_info" />
+
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textColor="#f4f4f3de"
+                android:textSize="20sp"
+                android:typeface="monospace"
+                android:text="@string/pull_info" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/button_send"
+                android:onClick="sendMessage" />
+
+        </LinearLayout>
+
+    </LinearLayout>
 </FrameLayout>
