--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,21 +4,15 @@
     tools:context=".MainActivity">
 
 
-
-    <!-- Search, should appear as action button -->
-    <item android:id="@+id/action_search"
-        android:icon="@drawable/ic_action_search"
-        android:title="@string/action_search"
-        app:showAsAction="ifRoom"/>
+    <item android:id="@+id/action_logout"
+        android:title="@string/logout"
+        app:showAsAction="never" />
 
     <!-- Settings, should always be in the overflow -->
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
         app:showAsAction="never" />
 
-    <item android:id="@+id/action_logout"
-        android:title="@string/logout"
-        app:showAsAction="never" />
 
     <item android:id="@+id/permissions"
         android:title="@string/permissions"
@@ -28,6 +22,13 @@
         android:title="@string/account"
         app:showAsAction="never" />
 
+    <item android:id="@+id/share"
+        android:title="@string/share"
+        app:showAsAction="never" />
+
+    <item android:id="@+id/rate"
+        android:title="@string/rate"
+        app:showAsAction="never" />
 
 
 </menu>
