--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -6,4 +6,5 @@
     android:choiceMode="singleChoice"
     android:divider="@color/Gray"
     android:dividerHeight="0dp"
+    android:layout_marginLeft="5dp"
     tools:context="com.drivehype.www.drivehype.NavDrawerFragments.NavigationDrawerFragment" />
