--- a/app/src/main/res/layout/fragment_allmedia.xml
+++ b/app/src/main/res/layout/fragment_allmedia.xml
@@ -5,4 +5,31 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:hardwareAccelerated="false">
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="horizontal"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
+        >
+
+    <Spinner
+        android:id="@+id/text_spinner"
+        android:layout_width="wrap_content"
+
+        android:layout_height="wrap_content" />
+
+    <Button
+        android:id="@+id/push_btn"
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="80dp"
+        android:text="Push Album"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+
+    </LinearLayout>
+
 </WebView>
+
+
+
