--- a/app/src/main/res/layout/fragment_push.xml
+++ b/app/src/main/res/layout/fragment_push.xml
@@ -4,6 +4,6 @@
 
     <!-- TODO: Update blank fragment layout -->
     <TextView android:layout_width="match_parent" android:layout_height="match_parent"
-        android:text="Selected media will be pushed through this fragment to an output device." />
+        android:text="This page will display meta dta concerning the displays currently installed" />
 
 </FrameLayout>
