--- a/app/src/main/res/layout/fragment_wifi.xml
+++ b/app/src/main/res/layout/fragment_wifi.xml
@@ -1,9 +1,10 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" tools:context="com.drivehype.www.drivehype.NavDrawerFragments.WiFiFragment">
+<?xml version="1.0" encoding="utf-8"?>
+  <WebView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/displaywebview"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:hardwareAccelerated="false">
+</WebView>
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
-        android:text="WiFi to be implemented." />
 
-</FrameLayout>
+
